--- a/app/src/main/res/layout/content_menu.xml
+++ b/app/src/main/res/layout/content_menu.xml
@@ -13,25 +13,25 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="7mm"
+        android:background="@drawable/cabezal"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/imageView7"
-            android:layout_width="87dp"
-
-            android:layout_height="match_parent"
-            app:srcCompat="@drawable/logo1" />
+            android:layout_width="79dp"
+            android:layout_height="6.5mm"
+            android:layout_gravity="center"
+            app:srcCompat="@drawable/loc" />
 
         <TextView
             android:id="@+id/texto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:layout_margin="10dp"
-            android:text="Bienvenido"
+            android:gravity="center"
+            android:text="Bienvenido            "
             android:textColor="#393d42"
-            android:textSize="27dp" />
+            android:textSize="25dp" />
 
 
     </LinearLayout>
