--- a/app/src/main/res/layout/activity_camiones.xml
+++ b/app/src/main/res/layout/activity_camiones.xml
@@ -9,28 +9,21 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:background="@android:color/background_light"
+        android:layout_height="7mm"
+        android:background="@drawable/cabezal"
         android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="48dp"
-            android:layout_height="match_parent"
-            android:background="@android:color/background_light"
-            android:orientation="vertical">
+
 
             <ImageView
                 android:id="@+id/atras"
-                android:layout_width="match_parent"
+                android:layout_width="8mm"
                 android:layout_height="match_parent"
                 app:srcCompat="@drawable/arriw" />
 
-        </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+
+
 
             <TextView
                 android:id="@+id/textView21"
@@ -40,19 +33,19 @@
                 android:text="Cuotas por Servicio"
                 android:textColor="#393d42"
                 android:textSize="25dp" />
-        </LinearLayout>
+
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/stilo"
+        android:layout_height="wrap_content"
+
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="54dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:orientation="horizontal">
 
@@ -60,7 +53,7 @@
             <TextView
                 android:id="@+id/textView13"
                 android:layout_width="60dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="10dp"
                 android:gravity="center_vertical"
@@ -71,13 +64,24 @@
             <Spinner
                 android:id="@+id/rutass"
                 android:layout_width="226dp"
-                android:layout_height="48dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center"
-                android:layout_margin="10dp"
-                android:background="@android:drawable/btn_dropdown"
-                android:theme="@style/AppTheme.AppBarOverlay" />
-        </LinearLayout>
+                android:layout_margin="5dp"
 
+                android:theme="@style/AppTheme.NoActionBar" />
+        </LinearLayout>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/in"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/autoss" />
         <WebView
             android:id="@+id/we"
             android:layout_width="match_parent"
@@ -87,12 +91,6 @@
 
         </WebView>
 
-        <ImageView
-            android:id="@+id/in"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="gone"
-            app:srcCompat="@drawable/autoss" />
 
     </LinearLayout>
 
