--- a/app/src/main/res/layout/activity_rutas.xml
+++ b/app/src/main/res/layout/activity_rutas.xml
@@ -15,21 +15,19 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="10mm"
-            android:background="@android:color/background_light"
+
+            android:layout_height="7mm"
+            android:background="@drawable/cabezal"
             android:orientation="horizontal">
 
-            <LinearLayout
-                android:layout_width="10mm"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+
 
                 <ImageView
                     android:id="@+id/atr"
-                    android:layout_width="match_parent"
+                    android:layout_width="8mm"
                     android:layout_height="match_parent"
                     app:srcCompat="@drawable/arriw" />
-            </LinearLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
