Revert "Merge branch 'master' of https://github.com/evazquez96/Cosettur"
This reverts commit 9e37281669d82d9ac7c748564900896612120b5b, reversing
changes made to 228cd672bd086f77e8bad3f68bd7c8f8ec6da1ec.

--- a/app/src/main/res/layout/activity_rutas.xml
+++ b/app/src/main/res/layout/activity_rutas.xml
@@ -15,19 +15,21 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-
-            android:layout_height="7mm"
-            android:background="@drawable/cabezal"
+            android:layout_height="10mm"
+            android:background="@android:color/background_light"
             android:orientation="horizontal">
 
-
+            <LinearLayout
+                android:layout_width="10mm"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/atr"
-                    android:layout_width="8mm"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     app:srcCompat="@drawable/arriw" />
-
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
