--- a/app/src/main/res/drawable/spinerss.xml
+++ b/app/src/main/res/drawable/spinerss.xml
@@ -4,11 +4,11 @@
     <corners android:radius="7dp" />
     <stroke
         android:width="1dp"
-        android:color="#393d42" />
+        android:color="@android:color/holo_blue_dark" />
     <gradient
-        android:startColor="@android:color/background_light"
-        android:endColor="#EFF8FB"
-        android:angle="270"
+        android:startColor="@android:color/holo_blue_dark"
+        android:endColor="@android:color/background_light"
+        android:angle="45"
         />
 
 
