--- a/app/src/main/res/layout/activity_cuentas.xml
+++ b/app/src/main/res/layout/activity_cuentas.xml
@@ -10,30 +10,38 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="7mm"
-        android:background="@drawable/cabezal"
+        android:layout_height="50dp"
+        android:background="@android:color/background_light"
         android:orientation="horizontal">
 
+        <LinearLayout
+            android:layout_width="48dp"
+            android:layout_height="131dp"
+            android:background="@android:color/background_light"
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/atr"
-                android:layout_width="8mm"
-                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
                 app:srcCompat="@drawable/arriw" />
 
+        </LinearLayout>
 
-
-
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="116dp"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/textView21"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="59dp"
                 android:gravity="center"
                 android:text="Referencias Bancarias"
                 android:textColor="#393d42"
                 android:textSize="25dp" />
-
+        </LinearLayout>
 
     </LinearLayout>
 
