--- a/app/src/main/res/layout/activity_recuperar.xml
+++ b/app/src/main/res/layout/activity_recuperar.xml
@@ -4,37 +4,45 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".recuperar">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="7mm"
-            android:background="@drawable/cabezal"
+            android:layout_height="50dp"
+            android:background="@android:color/background_light"
             android:orientation="horizontal">
 
-
+            <LinearLayout
+                android:layout_width="89dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/imageView8"
-                    android:layout_width="79dp"
-                    android:layout_height="6.5mm"
-                    android:layout_gravity="center"
-                    app:srcCompat="@drawable/loc" />
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/logo1" />
+            </LinearLayout>
 
-
-
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/textView22"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:text="Recuperar Contraseña"
                     android:textColor="#393d42"
                     android:textSize="20dp" />
-
+            </LinearLayout>
         </LinearLayout>
         <ScrollView
             android:layout_width="match_parent"
@@ -122,6 +130,6 @@
 
         </ScrollView>
 
-
+    </LinearLayout>
 
 </LinearLayout>
