--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -17,20 +17,29 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                   android:layout_height="7mm"
-                    android:background="@drawable/cabezal"
+                    android:layout_height="50dp"
+                    android:background="@android:color/background_light"
                     android:orientation="horizontal">
 
 
+                    <LinearLayout
+                        android:layout_width="74dp"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
 
                         <ImageView
                             android:id="@+id/imageView4"
                             android:layout_width="75dp"
-                            android:layout_height="6.5mm"
-                            android:layout_gravity="center"
-                            app:srcCompat="@drawable/loc" />
+                            android:layout_height="wrap_content"
+                            app:srcCompat="@drawable/logo1" />
+                    </LinearLayout>
 
-                         <TextView
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+                        <TextView
                             android:id="@+id/textView16"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
@@ -38,7 +47,7 @@
                             android:text="Registrar         "
                             android:textColor="#393d42"
                             android:textSize="27dp" />
-
+                    </LinearLayout>
 
                 </LinearLayout>
 
