--- a/app/src/main/res/layout/activity_camiones.xml
+++ b/app/src/main/res/layout/activity_camiones.xml
@@ -9,30 +9,19 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:background="@android:color/background_light"
+        android:layout_height="8mm"
+        android:background="@drawable/header"
         android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="48dp"
-            android:layout_height="match_parent"
-            android:background="@android:color/background_light"
-            android:orientation="vertical">
+
 
             <ImageView
                 android:id="@+id/atras"
-                android:layout_width="match_parent"
+                android:layout_width="8mm"
                 android:layout_height="match_parent"
                 app:srcCompat="@drawable/arriw" />
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <TextView
+         <TextView
                 android:id="@+id/textView21"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -40,14 +29,14 @@
                 android:text="Cuotas por Servicio"
                 android:textColor="#393d42"
                 android:textSize="25dp" />
-        </LinearLayout>
+
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/stilo"
+        android:layout_height="wrap_content"
+
         android:orientation="vertical">
 
         <LinearLayout
@@ -77,7 +66,12 @@
                 android:background="@android:drawable/btn_dropdown"
                 android:theme="@style/AppTheme.AppBarOverlay" />
         </LinearLayout>
-
+    </LinearLayout>
+        <ImageView
+            android:id="@+id/in"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/autoss" />
         <WebView
             android:id="@+id/we"
             android:layout_width="match_parent"
@@ -87,14 +81,9 @@
 
         </WebView>
 
-        <ImageView
-            android:id="@+id/in"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="gone"
-            app:srcCompat="@drawable/autoss" />
 
-    </LinearLayout>
+
+
 
 
 </LinearLayout>
