--- a/app/src/main/res/layout/activity_cuentas.xml
+++ b/app/src/main/res/layout/activity_cuentas.xml
@@ -10,28 +10,21 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@android:color/background_light"
+        android:layout_height="8mm"
+        android:background="@drawable/header"
         android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="48dp"
-            android:layout_height="131dp"
-            android:background="@android:color/background_light"
-            android:orientation="vertical">
+
 
             <ImageView
                 android:id="@+id/atr"
-                android:layout_width="match_parent"
+                android:layout_width="8mm"
                 android:layout_height="55dp"
                 app:srcCompat="@drawable/arriw" />
 
-        </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="116dp"
-            android:orientation="vertical">
+
+
 
             <TextView
                 android:id="@+id/textView21"
@@ -41,7 +34,7 @@
                 android:text="Referencias Bancarias"
                 android:textColor="#393d42"
                 android:textSize="25dp" />
-        </LinearLayout>
+
 
     </LinearLayout>
 
