--- a/app/src/main/res/layout/activity_paypal.xml
+++ b/app/src/main/res/layout/activity_paypal.xml
@@ -11,21 +11,18 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@android:color/background_light"
+        android:layout_height="8mm"
+        android:background="@drawable/header"
         android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="63dp"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+
 
             <ImageView
                 android:id="@+id/imageView9"
-                android:layout_width="match_parent"
+                android:layout_width="8mm"
                 android:layout_height="match_parent"
                 app:srcCompat="@drawable/loc" />
-        </LinearLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
