--- a/app/src/main/res/layout/activity_recuperar.xml
+++ b/app/src/main/res/layout/activity_recuperar.xml
@@ -13,21 +13,19 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@android:color/background_light"
+            android:layout_height="8mm"
+            android:background="@drawable/header"
             android:orientation="horizontal">
 
-            <LinearLayout
-                android:layout_width="89dp"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+
 
                 <ImageView
                     android:id="@+id/imageView8"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/logo1" />
-            </LinearLayout>
+                    android:layout_width="79dp"
+                    android:layout_height="6.5mm"
+                    android:layout_gravity="center"
+                    app:srcCompat="@drawable/loc" />
+
 
             <LinearLayout
                 android:layout_width="match_parent"
