--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -4,40 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".registro">
 
 
 
 
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:background="@android:color/background_light"
+                    android:layout_height="8mm"
+                    android:background="@drawable/header"
                     android:orientation="horizontal">
 
 
-                    <LinearLayout
-                        android:layout_width="74dp"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
+
 
                         <ImageView
                             android:id="@+id/imageView4"
-                            android:layout_width="75dp"
-                            android:layout_height="wrap_content"
-                            app:srcCompat="@drawable/logo1" />
-                    </LinearLayout>
+                            android:layout_width="79dp"
+                            android:layout_height="6.5mm"
+                            android:layout_gravity="center"
+                            app:srcCompat="@drawable/loc" />
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
+
+
 
                         <TextView
                             android:id="@+id/textView16"
@@ -47,7 +40,7 @@
                             android:text="Registrar         "
                             android:textColor="#393d42"
                             android:textSize="27dp" />
-                    </LinearLayout>
+
 
                 </LinearLayout>
 
@@ -202,7 +195,7 @@
 
                 </ScrollView>
 
-            </LinearLayout>
+
 
 
 </LinearLayout>
