--- a/app/src/main/res/layout/activity_rutas.xml
+++ b/app/src/main/res/layout/activity_rutas.xml
@@ -2,39 +2,30 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".rutas">
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="10mm"
-            android:background="@android:color/background_light"
+            android:layout_height="8mm"
+            android:background="@drawable/header"
             android:orientation="horizontal">
 
-            <LinearLayout
-                android:layout_width="10mm"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+
 
                 <ImageView
                     android:id="@+id/atr"
-                    android:layout_width="match_parent"
+                    android:layout_width="8mm"
                     android:layout_height="match_parent"
                     app:srcCompat="@drawable/arriw" />
-            </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+
+
 
                 <TextView
                     android:id="@+id/textView17"
@@ -44,7 +35,7 @@
                     android:text="Rutas de Servicio"
                     android:textColor="#393d42"
                     android:textSize="25dp" />
-            </LinearLayout>
+
         </LinearLayout>
 
         <LinearLayout
@@ -166,5 +157,5 @@
             android:background="@drawable/stilo"
             android:orientation="horizontal"></LinearLayout>
 
-    </LinearLayout>
+
 </LinearLayout>
