--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,14 +76,10 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="168dp"
-                    android:orientation="horizontal">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="159dp"
-                        android:orientation="vertical">
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -150,21 +146,11 @@
 
                         </LinearLayout>
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="67dp"
-                            android:orientation="vertical">
 
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="17dp"
-                                android:orientation="horizontal"></LinearLayout>
 
-                            <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="34dp"
-                                android:layout_gravity="center"
-                                android:orientation="horizontal">
+
+
+
 
 
                                 <Button
@@ -172,6 +158,8 @@
                                     android:layout_width="140dp"
                                     android:layout_height="34dp"
                                     android:layout_centerVertical="true"
+                                    android:layout_gravity="center"
+                                    android:layout_margin="10dp"
                                     android:background="@drawable/botones"
                                     android:text="Iniciar sesion"
                                     android:textColor="@android:color/background_light" />
@@ -185,31 +173,30 @@
                                     android:text="¡¡registrate!!"
                                     android:textColor="@android:color/background_light" />
 
-                            </LinearLayout>
 
-                        </LinearLayout>
-                    </LinearLayout>
+                    <TextView
+                        android:id="@+id/recu"
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp"
+                        android:gravity="center"
+                        android:text="¿Olvidaste tu contraseña?"
+                        android:textColor="@android:color/holo_blue_dark"
+                        android:textSize="20dp" />
+
+                    <TextView
+                        android:id="@+id/terminos"
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp"
+                        android:gravity="center"
+                        android:text="Aviso de Privacidad"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="18dp" />
+
+
 
                 </LinearLayout>
 
 
-                <TextView
-                    android:id="@+id/recu"
-                    android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:gravity="center"
-                    android:text="¿Olvidaste tu contraseña?"
-                    android:textColor="@android:color/holo_blue_dark"
-                    android:textSize="20dp" />
-
-                <TextView
-                    android:id="@+id/terminos"
-                    android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:gravity="center"
-                    android:text="Aviso de Privacidad"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="18dp" />
 
 
                 <!--- <Button
