--- a/app/src/main/res/layout/activity_suscribir.xml
+++ b/app/src/main/res/layout/activity_suscribir.xml
@@ -60,7 +60,7 @@
                 android:layout_height="match_parent">
 
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/correo"
+                    android:id="@+id/correoss"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Correo Electronico"
