--- a/app/src/main/res/layout/activity_suscribir.xml
+++ b/app/src/main/res/layout/activity_suscribir.xml
@@ -332,6 +332,21 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp">
+                </LinearLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Cuota"/>
+                <TextView
+                    android:id="@+id/idpag"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    />
             </LinearLayout>
 
             </LinearLayout>
