--- a/app/src/main/res/layout/activity_suscribir.xml
+++ b/app/src/main/res/layout/activity_suscribir.xml
@@ -117,21 +117,7 @@
 
             </android.support.design.widget.TextInputLayout>
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="30dp">
 
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:text="Cuota"/>
-                    <TextView
-                        android:id="@+id/idpag"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent" />
-
-                </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
@@ -341,6 +327,7 @@
                     android:textColor="#393d42"
                     android:text=" Ciclo Escolar :" />
 
+
                 <Spinner
                     android:id="@+id/ciclo"
                     android:layout_width="match_parent"
@@ -348,9 +335,46 @@
                     />
 
 
-            </LinearLayout>
 
             </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:orientation="horizontal">
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:textSize="18dp"
+                        android:textStyle="bold"
+                        android:gravity="center"
+                        android:text="Cuota : "/>
+                    <TextView
+                        android:id="@+id/idpag"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:textSize="16dp"
+                        android:textStyle="bold"
+                        android:gravity="center"
+                        android:text="1729"/>
+                    <TextView
+                        android:id="@+id/cuotas"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:textSize="12dp"
+                        android:textStyle="bold"
+                        android:text="(mil setecientos veintinueve pesos)Cuatro pagos mensuales"/>
+
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+
 
             <Button
                 android:id="@+id/siguiente"
