--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -4,49 +4,52 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/stilo"
+    android:background="#152E4D"
     android:orientation="vertical"
 
     tools:context=".inicio">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="20dp"
-        android:background="#ffffff"
-        android:orientation="vertical">
-
+        android:layout_marginTop="90dp"
+      android:orientation="vertical">
 
         <LinearLayout
             android:id="@+id/cont"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="20dp"
-            android:background="#ffffff"
-
+            android:layout_marginTop="10dp"
             android:orientation="horizontal">
 
             <ProgressBar
                 android:id="@+id/progressBar3"
                 style="?attr/actionBarTabBarStyle"
-                android:layout_width="139dp"
-                android:layout_height="match_parent"
+                android:layout_width="80dp"
+                android:layout_height="90dp"
                 android:layout_gravity="center"
-
                 android:visibility="visible" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Espere un Momento"
+                android:textColor="ffffff" />
 
         </LinearLayout>
 
         <ImageView
             android:id="@+id/imageView18"
             android:layout_width="wrap_content"
-            android:layout_height="382dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="10dp"
+
             android:background="#ffffff"
-            app:srcCompat="@drawable/logoss" />
+            app:srcCompat="@drawable/ima1" />
+
+
 
     </LinearLayout>
 
